--- a/calculator.html
+++ b/calculator.html
@@ -28,5 +28,30 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <div>
+    <button type="button" class="btn btn-outline-primary">1</button>
+    <button type="button" class="btn btn-outline-primary">2</button>
+    <button type="button" class="btn btn-outline-primary">3</button>
+    <button type="button" class="btn btn-outline-primary">/</button>
+  </div>
+  <div>
+    <button type="button" class="btn btn-outline-primary">4</button>
+    <button type="button" class="btn btn-outline-primary">5</button>
+    <button type="button" class="btn btn-outline-primary">6</button>
+    <button type="button" class="btn btn-outline-primary">x</button>
+  </div>
+  <div>
+    <button type="button" class="btn btn-outline-primary">7</button>
+    <button type="button" class="btn btn-outline-primary">8</button>
+    <button type="button" class="btn btn-outline-primary">9</button>
+    <button type="button" class="btn btn-outline-primary">-</button>
+  </div>
+  <div>
+    <button type="button" class="btn btn-outline-primary">0</button>
+    <button type="button" class="btn btn-outline-primary">.</button>
+    <button type="button" class="btn btn-outline-primary">=</button>
+    <button type="button" class="btn btn-outline-primary">+</button>
+  </div>
+
   </body>
 </html>
