--- a/exercise.html
+++ b/exercise.html
@@ -18,5 +18,58 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <div class="fluid-container">
+    <table class="table table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">name</th>
+      <th scope="col">image</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">panda</th>
+      <td> <img src="https://www.zoo-berlin.de/fileadmin/_processed_/8/3/csm_Meng_Meng_Baby_1_0b7fe14b2b.jpg" width="100px"></td>
+    </tr>
+    <tr>
+      <th scope="row">parrot</th>
+      <td><img src="https://www.thesprucepets.com/thmb/_38eJ8mJ2EHkwi20NxFYg6OB3U4=/2576x2576/smart/filters:no_upscale()/close-up-of-gold-and-blue-macaw-perching-on-tree-962288862-5b50073e46e0fb0037c23c23.jpg" width="100px"> </td>
+      
+    </tr>
+    <tr>
+      <th scope="row">squid</th>
+      <td> <img src="https://media.wired.com/photos/5926615caf95806129f4f3f8/master/w_2400,c_limit/SquidRNA_JC7983.jpg" width="100px"></td>
+    </tr>
+  </tbody>
+</table>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.thesprucepets.com/thmb/_38eJ8mJ2EHkwi20NxFYg6OB3U4=/2576x2576/smart/filters:no_upscale()/close-up-of-gold-and-blue-macaw-perching-on-tree-962288862-5b50073e46e0fb0037c23c23.jpg" class="d-block w-25" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://media.wired.com/photos/5926615caf95806129f4f3f8/master/w_2400,c_limit/SquidRNA_JC7983.jpg" class="d-block w-25" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.zoo-berlin.de/fileadmin/_processed_/8/3/csm_Meng_Meng_Baby_1_0b7fe14b2b.jpg" class="d-block w-25" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  <button type="button" class="btn btn-primary">next</button>
+  <button type="button" class="btn btn-secondary">previous</button>
+</div>
+
+
+  </div>
+
+
+
   </body>
 </html>
